--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  url_launcher: ^6.1.7
+  app_links: ^3.4.2
+  flutter_appauth: ^5.0.0
+  flutter_secure_storage: ^8.0.0
+  http: ^0.13.5
   badges: ^2.0.3
   flutter:
     sdk: flutter
